solve overlapping service icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1361,7 +1361,7 @@ p {
 }
 
 .single-services:hover .services-icon {
-  top: -30px;
+  top: -16px;
   scale: 0.75;
   box-shadow: 0 15px 45px rgba(0, 0, 0, 0.15);
   z-index: 10;
